--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ code {
 
 .hero h1 {
   color: white;
-  font-weight: 600;
+  font-weight: 700;
   font-size: 5rem;
   margin: 0;
   padding: 0%;
@@ -62,13 +62,36 @@ code {
 .hero p {
   color: white;
   font-size: 18px;
+  font-weight: 500;
 }
 
 
 .benefits {
   display: flex;
   justify-content: center;
+  align-items: top;
+  margin-top: 50px;
 }
+
+.benefits div {
+  width: 30%;
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.benefits h3 {
+  font-size: 20px;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.benefits p {
+  font-size: 16px;
+  color: #777;
+}
+
 
 .footer {
   background-color: #f2f2f2;
