--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ code {
   padding: 20px;
   text-align: center;
   height: 500px;
-  line-height: 7vh;
+  line-height: 6vh;
 }
 
 .hero h1 {
@@ -72,7 +72,8 @@ code {
   display: flex;
   justify-content: center;
   align-items: top;
-  margin-top: 50px;
+  margin-top: -50px;
+  margin-bottom: 50px;
 }
 
 .benefit {
@@ -135,6 +136,10 @@ code {
   padding-right: 50px;
 }
 
+.text-button h2 {
+  font-size: 3rem;
+}
+
 .get-picks {
   display: inline-block;
   margin: 0 auto;
@@ -156,9 +161,138 @@ code {
   background-color: #00a354;
 }
 
+.plans, .testimonials {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.plans h1, .testimonials h1 {
+  font-size: 4rem;
+  padding: 0 auto;
+  margin: 0 auto;
+}
+
+.plans p, .testimonials p {
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 50px;
+}
+
+.plans-container, .testimonials-container {
+  display: flex;
+  justify-content: center;
+}
+
+.day, .week, .month {
+  background: linear-gradient(to bottom, #00BF63, black) !important;
+  border-radius: 5%;
+  color: white;
+  margin: 0 20px;
+  width: 425px !important;
+  padding-bottom: 25px;
+}
+
+.month h2 {
+  font-size: 32px;
+}
+
+.week h2 {
+  font-size: 32px;
+}
+
+.day h2 {
+  font-size: 32px;
+}
+
+.test {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  background-color: #f4f4f4;
+  border-radius: 5%;
+}
+
+.testimonials-container {
+  display: flex;
+  overflow: hidden;
+  width: 100%;
+}
+
+.testimonial {
+  flex: 0 0 100%;
+  animation: testimonialScroll 18s infinite linear;
+  white-space: nowrap;
+}
+
+@keyframes testimonialScroll {
+  0%, 100% {
+    transform: translateX(0);
+  }
+  20%, 80% {
+    transform: translateX(-100%);
+  }
+}
+
+
+.plans-container button {
+display: inline-block;
+  margin: 0 auto;
+  width: 200px;
+  padding: 12px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  background-color: #00BF63;
+  color: #ffffff;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.plans-container button:hover {
+  background-color: #00a354;
+}
+
+.footer-above {
+  background-color: #f4f4f4;
+}
 
 .footer {
-  background-color: #f2f2f2;
-  padding: 10px;
-  text-align: center;
+  background-color: #333333;
+  padding: 20px;
+  color: #ffffff;
 }
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer p {
+  margin: 0;
+}
+
+.footer-links {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-links li {
+  display: inline;
+  margin-right: 10px;
+}
+
+.footer-links li a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.footer-links li a:hover {
+  text-decoration: underline;
+}
+
