--- a/src/index.css
+++ b/src/index.css
@@ -287,3 +287,77 @@ display: inline-block;
   text-decoration: underline;
 }
 
+@media only screen and (max-width: 767px) {
+  .navbar-link {
+    font-size: 16px;
+  }
+  .hero h1 {
+    font-size: 2.3rem;
+    line-height: 5vh;
+  }
+  .hero p {
+    line-height: 3vh;
+  }
+  .benefits {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .benefit {
+    padding-left: 0px;
+    margin-left: 0px;
+    margin:0px 0px 20px 0px;
+    width: 270px !important;
+  }
+  .consistency-matters {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .consistency-matters h1 {
+    font-size: 28px;
+  }
+  .img-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .winner {
+    width: 80vw;
+  }
+  .text-button h2 {
+    font-size: 24px;
+  }
+  .text-button p {
+    width: 80vw;
+  }
+  .testimonials {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  .testimonials h1, .plans h1 {
+    font-size: 30px;
+  }
+  .testimonials-container, .plans-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  .test {
+    width: 270px !important;
+    margin-bottom: 20px;
+  }
+  .day, .week, .month {
+    width: 320px !important;
+    margin-bottom: 20px;
+  }
+  .consistency-matters {
+    width: 90%; /* Adjust the width percentage as needed */
+    max-width: none; /* Reset the max-width property if necessary */
+  }
+  .footer-above {
+    display: flex;
+    justify-content: center;
+  }
+}
