--- a/src/index.css
+++ b/src/index.css
@@ -183,6 +183,14 @@ code {
   justify-content: center;
 }
 
+.plans-container ul {
+  list-style: none;
+}
+
+ul {
+  padding-left: 0px
+}
+
 .day, .week, .month {
   background: linear-gradient(to bottom, #00BF63, black) !important;
   border-radius: 5%;
@@ -307,7 +315,7 @@ display: inline-block;
     padding-left: 0px;
     margin-left: 0px;
     margin:0px 0px 20px 0px;
-    width: 270px !important;
+    width: 290px !important;
   }
   .consistency-matters {
     display: flex;
@@ -345,7 +353,7 @@ display: inline-block;
     flex-direction: column;
   }
   .test {
-    width: 270px !important;
+    width: 290px !important;
     margin-bottom: 20px;
   }
   .day, .week, .month {
